RESOLVED FIXED Bug 88306
[Qt][Win] Fix building ImageQt.cpp
https://bugs.webkit.org/show_bug.cgi?id=88306
Summary [Qt][Win] Fix building ImageQt.cpp
Csaba Osztrogonác
Reported 2012-06-05 01:15:42 PDT
WebCore/platform/graphics/qt/ImageQt.cpp doesn't build, because QPixmap::fromWinHBITMAP(...) doesn't exist. (or is it renamed/refactored?)
Attachments
Patch (1.47 KB, patch)
2012-06-07 05:09 PDT, Csaba Osztrogonác
no flags
Patch (1.29 KB, patch)
2012-06-07 09:37 PDT, Csaba Osztrogonác
no flags
Patch (1.53 KB, patch)
2012-06-08 09:06 PDT, Balazs Kelemen
no flags
Patch (1.68 KB, patch)
2012-06-08 09:33 PDT, Balazs Kelemen
no flags
Csaba Osztrogonác
Comment 1 2012-06-05 09:02:01 PDT
The exact build error: f:\WebKit\Source\WebCore\platform\graphics\qt\ImageQt.cpp(292) : error C2039: 'fromWinHBITMAP' : is not a member of 'QPixmap' f:\qt5\qtbase\include\qtgui\../../src/gui/image/qpixmap.h(64) : see declaration of 'QPixmap' f:\WebKit\Source\WebCore\platform\graphics\qt\ImageQt.cpp(292) : error C3861: 'fromWinHBITMAP': identifier not found
Caio Marcelo de Oliveira Filho
Comment 2 2012-06-05 10:56:36 PDT
(In reply to comment #0) > WebCore/platform/graphics/qt/ImageQt.cpp doesn't build, because > QPixmap::fromWinHBITMAP(...) doesn't exist. (or is it renamed/refactored?) See qtbase hash b8d330904b279de57d70caef70ab2d2a6770f0cc. Apparently this function now goes by the name of qt_pixmapFromWinHBITMAP().
Csaba Osztrogonác
Comment 3 2012-06-07 05:09:10 PDT
Created attachment 146258 [details] Patch WIP patch, not tested yet
Csaba Osztrogonác
Comment 4 2012-06-07 07:43:03 PDT
(In reply to comment #3) > Created an attachment (id=146258) [details] > Patch > > WIP patch, not tested yet It doesn't work, because there isn't any header for qt_pixmapFromWinHBITMAP() function, so we can't use it in WebKit ... From this point I have no idea how to fix it. Any volunteer to fix it?
Csaba Osztrogonác
Comment 5 2012-06-07 09:37:21 PDT
Created attachment 146309 [details] Patch Please don't review it, I don't want to land it. It is only a workaround until proper fix to be able test other build problems.
Csaba Osztrogonác
Comment 6 2012-06-07 09:37:54 PDT
Crazy webkit-patch, I don't want to assign it myself ...
Balazs Kelemen
Comment 7 2012-06-08 09:06:19 PDT
Csaba Osztrogonác
Comment 8 2012-06-08 09:14:33 PDT
(In reply to comment #7) > Created an attachment (id=146580) [details] > Patch I tested on Windows and works fine. Simon, r?
Csaba Osztrogonác
Comment 9 2012-06-08 09:15:14 PDT
Hmmm ... Just a quick question ... will it work with Qt 4?
Balazs Kelemen
Comment 10 2012-06-08 09:18:59 PDT
(In reply to comment #9) > Hmmm ... Just a quick question ... will it work with Qt 4? Of course it won't. I did not think about that. I'm going to fix it.
Balazs Kelemen
Comment 11 2012-06-08 09:33:50 PDT
Balazs Kelemen
Comment 12 2012-06-10 05:09:49 PDT
Comment on attachment 146586 [details] Patch Clearing flags on attachment: 146586 Committed r119924: <http://trac.webkit.org/changeset/119924>
Balazs Kelemen
Comment 13 2012-06-10 05:09:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.