[Qt][Win] Fix building ImageQt.cpp https://bugs.webkit.org/show_bug.cgi?id=88306

Reviewed by Simon Hausmann.

No new tests, this is just a build fix.

* platform/graphics/qt/ImageQt.cpp:
(WebCore):
(WebCore::BitmapImage::create):
Adapt to the "API" changes in Qt.

Canonical link: https://commits.webkit.org/106560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119924 268f45cc-cd09-0410-ab3c-d52691b4dbfc