Source/WebCore/platform/graphics/qt/ImageQt.cpp
@@ -287,9 +287,20 @@ void BitmapImage::checkForSolidColor()
 }
 
 #if OS(WINDOWS)
+
+#if HAVE(QT5)
+Q_GUI_EXPORT QPixmap qt_pixmapFromWinHBITMAP(HBITMAP, int hbitmapFormat = 0);
+#endif
+
 PassRefPtr<BitmapImage> BitmapImage::create(HBITMAP hBitmap)
 {
-    return BitmapImage::create(new QPixmap(QPixmap::fromWinHBITMAP(hBitmap)));
+#if HAVE(QT5)
+    QPixmap* qPixmap = new QPixmap(qt_pixmapFromWinHBITMAP(hBitmap));
+#else
+    QPixmap* qPixmap = new QPixmap(QPixmap::fromWinHBITMAP(hBitmap));
+#endif
+
+    return BitmapImage::create(qPixmap);
 }
 #endif
 
